# halflife-unified-sdk

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  BUILDING.md  CHANGELOG.md  CMakeLists.txt  DEVELOPING.md  FULL_CHANGELOG.md  FULL_UPDATED_CHANGELOG.md  INSTALL.md  README.md  TESTING_GUIDELINES.md  UNIFIED_CHANGELOG.md  filecopy.bat  vcpkg-configuration.json  vcpkg.json
src/game/client/: CClientLibrary.cpp  CClientLibrary.h  CMakeLists.txt  ClientLibrary.cpp  ClientLibrary.h  DelayLoad.cpp  Exports.h  cdll_int.cpp  cl_dll.h  cl_util.h  client_gibs.cpp  client_gibs.h  com_weapons.cpp  com_weapons.h  demo.cpp  demo.h  entity.cpp  entity.h  ev_common.cpp  ev_hldm.cpp  ev_hldm.h  events.cpp  eventscripts.h  global_consts.h  interpolation.cpp  interpolation.h  player_info.h  tf_defs.h  util.cpp  view.cpp  view.h
src/game/client/hl/: hl_baseentity.cpp  hl_events.cpp  hl_objects.cpp  hl_weapons.cpp
src/game/client/input/: in_camera.cpp  input.cpp  inputw32.cpp  kbutton.h
src/game/client/networking/: CClientNetworkSystem.cpp  CClientNetworkSystem.h  ClientUserMessages.cpp  ClientUserMessages.h
src/game/client/particleman/: CBaseParticle.cpp  CBaseParticle.h  CFrustum.cpp  CFrustum.h  CMiniMem.cpp  CMiniMem.h  IParticleMan_Active.cpp  IParticleMan_Active.h  particleman.h  particleman_internal.h
src/game/client/prediction/: ClientPredictionSystem.cpp  ClientPredictionSystem.h
src/game/client/rendering/: GameStudioModelRenderer.cpp  StudioModelRenderer.cpp  StudioModelRenderer.h  studio_util.cpp  studio_util.h  tri.cpp  tri.h
src/game/client/sound/: ClientSoundReplacement.h  ClientSoundReplacementSystem.h  DummySoundSystem.h  GameSoundSystem.cpp  GameSoundSystem.h  HalfLifeSoundEffects.cpp  HalfLifeSoundEffects.h  IGameSoundSystem.h  IMusicSystem.h  ISoundSystem.h  MusicSystem.cpp  MusicSystem.h  OpenALMusicSystem.cpp  OpenALMusicSystem.h  OpenALSoundSystem.cpp  OpenALSoundSystem.h  OpenALUtils.h  RiffChunkReader.h  SentencesSystem.cpp  SentencesSystem.h  SoundCache.cpp  SoundCache.h  SoundDefs.h  SoundInternalDefs.h  SoundSystem.cpp  SoundSystem.h
src/game/client/ui/: voice_banmgr.cpp  voice_banmgr.h  voice_status.cpp  voice_status.h
src/game/server/: CClientCommandRegistry.cpp  CClientCommandRegistry.h  CGlobalState.cpp  CGlobalState.h  CMakeLists.txt  CMapState.cpp  CMapState.h  CServerLibrary.cpp  CServerLibrary.h  ClientCommandRegistry.cpp  ClientCommandRegistry.h  MapState.h  ServerConfigContext.h  ServerLibrary.cpp  ServerLibrary.h  UserMessages.cpp  UserMessages.h  activity.h  activitymap.h  cdll_dll.h  client.cpp  client.h  decals.h  enginecallback.h  extdll.h  game.cpp  game.h  globals.cpp  h_export.cpp  nodes.cpp  nodes.h  plane.cpp  plane.h  saverestore.cpp  saverestore.h  server.def  server.def.in  skill.cpp  skill.h  util.cpp  (+4 more)
src/game/server/bot/: BotSystem.cpp  BotSystem.h
src/game/server/config/: CommandWhitelist.h  ConditionEvaluator.cpp  ConditionEvaluator.h
src/game/server/entities/: CBaseAnimating.h  CBaseButton.h  CBaseDelay.h  CBaseEntity.h  CBaseToggle.h  CBaseTrigger.cpp  CBaseTrigger.h  CClientFog.cpp  CClientFog.h  CCorpse.cpp  CCorpse.h  CMultiSource.h  CPointEntity.h  CTriggerChangeKeyValue.cpp  EntityTemplateSystem.cpp  EntityTemplateSystem.h  animating.cpp  animation.cpp  animation.h  blowercannon.cpp  bmodels.cpp  buttons.cpp  cbase.cpp  cbase.h  changelevel.cpp  changelevel.h  doors.cpp  doors.h  effects.cpp  effects.h  explode.cpp  explode.h  func_break.cpp  func_break.h  func_tank.cpp  func_tank_of.cpp  h_cycler.cpp  lights.cpp  logic_entities.cpp  maprules.cpp  (+23 more)
src/game/server/gamerules/: CGameRules.cpp  CGameRules.h  CHalfLifeCTFplay.cpp  CHalfLifeCTFplay.h  CHalfLifeCoopplay.cpp  CHalfLifeCoopplay.h  CHalfLifeMultiplay.cpp  CHalfLifeMultiplay.h  CHalfLifeRules.cpp  (+20 more)
utils/: CMakeLists.txt  vcpkg.json
utils/bspinfo/: CMakeLists.txt  bspinfo.cpp
utils/common/: bspfile.cpp  bspfile.h  cmdlib.cpp  cmdlib.h  l3dslib.cpp  l3dslib.h  lbmlib.cpp  lbmlib.h  mathlib.cpp  mathlib.h  meter.cpp  meter.h  movie.h  polylib.cpp  polylib.h  scriplib.cpp  scriplib.h  threads.cpp  threads.h  trilib.cpp  trilib.h  wadlib.cpp  wadlib.h
utils/light/: CMakeLists.txt
utils/makefont/: CMakeLists.txt  makefont.cpp
utils/makels/: CMakeLists.txt  makels.cpp
utils/mdlviewer/: CMakeLists.txt  mdlviewer.cpp  mdlviewer.h  studio_render.cpp  studio_utils.cpp
utils/mkmovie/: CMakeLists.txt  mkmovie.cpp
utils/procinfo/: CMakeLists.txt  procinfo.cpp
utils/qbsp2/: CMakeLists.txt  bsp5.h  cull.cpp  gldraw.cpp  merge.cpp  nodraw.cpp  outside.cpp  portals.cpp  qbsp.cpp  solidbsp.cpp  surfaces.cpp  tjunc.cpp  writebsp.cpp
utils/qcsg/: CMakeLists.txt  brush.cpp  csg.h  gldraw.cpp  hullfile.cpp  map.cpp  qcsg.cpp  textures.cpp
utils/qlumpy/: CMakeLists.txt  qlumpy.cpp  qlumpy.h  quakegrb.cpp
utils/qrad/: CMakeLists.txt  lightmap.cpp  qrad.cpp  qrad.h  trace.cpp  vismat.cpp
utils/serverctrl/: CMakeLists.txt  ServerCtrlDlg.cpp  ServerCtrlDlg.h
utils/smdlexp/: CMakeLists.txt  smdlexp.cpp  smedefs.h  smexprc.h
utils/sprgen/: CMakeLists.txt  sprgen.cpp  spritegn.h
utils/studiomdl/: CMakeLists.txt  bmpread.cpp  studiomdl.cpp  studiomdl.h  tristrip.cpp  write.cpp
utils/vgui/include/: VGUI.h  VGUI_ActionSignal.h  VGUI_App.h  VGUI_Bitmap.h  VGUI_BitmapTGA.h  VGUI_Border.h  VGUI_BorderLayout.h  VGUI_BorderPair.h  VGUI_BuildGroup.h  VGUI_Button.h  VGUI_ButtonController.h  VGUI_ButtonGroup.h  VGUI_ChangeSignal.h  VGUI_CheckButton.h  VGUI_Color.h  VGUI_ComboKey.h  VGUI_ConfigWizard.h  VGUI_Cursor.h  VGUI_Dar.h  VGUI_DataInputStream.h  VGUI_Desktop.h  VGUI_DesktopIcon.h  VGUI_EditPanel.h  VGUI_EtchedBorder.h  VGUI_FileInputStream.h  VGUI_FlowLayout.h  VGUI_FocusChangeSignal.h  VGUI_FocusNavGroup.h  VGUI_Font.h  VGUI_Frame.h  VGUI_FrameSignal.h  VGUI_GridLayout.h  VGUI_HeaderPanel.h  VGUI_Image.h  VGUI_ImagePanel.h  VGUI_InputSignal.h  VGUI_InputStream.h  VGUI_IntChangeSignal.h  VGUI_IntLabel.h  VGUI_KeyCode.h  (+39 more)
utils/vgui/lib/: .gitignore
utils/visx2/: CMakeLists.txt  flow.cpp  soundpvs.cpp  vis.cpp  vis.h
utils/xwad/: CMakeLists.txt  xwad.cpp
(+1037 files in other folders)
